# obs-aitum-multistream

./: CMakeLists.txt  README.md  TRANSLATIONS.md  buildspec.json  config-dialog.cpp  config-dialog.hpp  config-utils.cpp  config-utils.hpp  file-updater.c  installer.iss.in  multistream.cpp  multistream.hpp  output-dialog.cpp  output-dialog.hpp  resources.qrc  stream-key-input.cpp  stream-key-input.hpp
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/setup-macos-codesigning/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  .build.zsh  .package.zsh  Package-Windows.ps1  build-linux.sh  check-changes.sh  check-cmake.sh  check-format.sh  package-linux.sh
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml  build.yml  check-format.yaml
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: bn-BD.ini.ini  en-US.ini  es-ES.ini  pt-BR.ini  pt-PT.ini  ru-RU.ini  zh-CN.ini
